# python-devops-cicd-project

./: LICENSE  README.md  code_line.txt  pyproject.toml
.github/workflows/: python-ci.yaml
src/simple_http_checker/: checker.py  cli.py
tests/: test_checker.py  test_cli.py
